# dynamic-foraging-data-cleanup

./: README.md  makefile  pyproject.toml
.github/workflows/: test_and_lint.yml
src/dynamic_foraging_data_cleanup/: config.py  data_cleanup.py  main.py  setup_loguru.py
tests/: test_data_cleanup.py
